# PokeAI

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
ai/configs/: config.json
ai/scenarios/: simple.json  simple.scenario
ai/scripts/: export_onnx.py  train.py
assets/: mainMenu.gui  move.gui  movePanel.gui  open_file_dialog.gui  overwrite_warning.gui  pkmnPanel.gui  pkmnPreview.gui
assets/gen1/: list.json  start.json
assets/gen1/moves/: list.json
assets/gen1/moves/anims/: move_10.json  move_100.json  move_101.json  move_102.json  move_103.json  move_104.json  move_105.json  move_106.json  move_107.json  move_108.json  move_109.json  move_11.json  move_110.json  move_111.json  move_112.json  move_113.json  move_114.json  move_115.json  move_116.json  move_117.json  move_118.json  move_119.json  move_12.json  move_121.json  move_122.json  move_123.json  move_124.json  move_125.json  move_126.json  move_127.json  move_128.json  move_129.json  move_13.json  move_130.json  move_131.json  move_132.json  move_133.json  move_134.json  move_135.json  move_136.json  (+129 more)
assets/gen1/sounds/: battle0_loop.txt  battle1_loop.txt
src/: BgbHandler.cpp  BgbHandler.hpp  EmulatorHandle.hpp  Exception.hpp  GameHandle.cpp  GameHandle.hpp  Move.cpp  Move.hpp  PkmnGen1Handle.cpp  PkmnGen1Handle.hpp  Pokemon.cpp  Pokemon.hpp  PokemonRandomGenerator.cpp  PokemonRandomGenerator.hpp  PokemonTypes.cpp  PokemonTypes.hpp  Socket.cpp  Socket.hpp  StatsChange.hpp  StatusChange.cpp  StatusChange.hpp  commandLine.cpp  gui.cpp  gui.hpp  main.cpp
src/AIs/: AI.hpp  AIFactory.cpp  AIFactory.hpp  AIHeuristic.cpp  AIHeuristic.hpp  RandomAI.cpp  RandomAI.hpp
src/CBinding/: commandLine.c
src/CBinding/Emulator/: BgbHandler.cpp  BgbHandler.h
src/CBinding/GameEngine/: BattleHandler.cpp  BattleHandler.h  Move.cpp  Move.h  Pokemon.cpp  Pokemon.h  RandomGenerator.cpp  RandomGenerator.h  State.h  StatsChange.cpp  StatsChange.h  StatusChange.cpp  StatusChange.h  Type.cpp  Type.h  c_cpp.h
src/Client/: commandLine.cpp  commandLine.hpp
src/Client/AIs/: AI.hpp  AIFactory.cpp  AIFactory.hpp  AIHeuristic.cpp  AIHeuristic.hpp
src/Client/Networking/: BgbHandler.cpp  BgbHandler.hpp  Socket.cpp
src/Client/gui/: Gen1Renderer.cpp  Gen1Renderer.hpp  IRenderer.cpp  IRenderer.hpp  Utils.cpp  Utils.hpp  battle.cpp  gui.cpp  gui.hpp  test.cpp
src/Emulator/: BgbHandler.cpp  BgbHandler.hpp  EmulatorGameHandle.cpp  EmulatorGameHandle.hpp  EmulatorHandle.hpp  Socket.cpp  Socket.hpp
src/GameEngine/: BattleHandler.cpp  BattleHandler.hpp  Damage.hpp  EmulatorGameHandle.cpp  EmulatorGameHandle.hpp  EmulatorHandle.hpp  Event.hpp  Exception.hpp  GameHandle.cpp  GameHandle.hpp  Move.cpp  Move.hpp  Pokemon.cpp  Pokemon.hpp  PokemonRandomGenerator.cpp  PokemonRandomGenerator.hpp  PokemonTypes.cpp  PokemonTypes.hpp  RandomGenerator.cpp  State.cpp  State.hpp  StatsChange.cpp  StatsChange.hpp  StatusChange.cpp  StatusChange.hpp  Team.cpp  Team.hpp  Type.cpp  Type.hpp  Utils.cpp  Utils.hpp
src/GameEngine/Gen1/: BattleHandler.cpp  Common.hpp  Move.cpp  Move.hpp  Pokemon.cpp  Pokemon.hpp  RandomGenerator.cpp  RandomGenerator.hpp  State.hpp  StatusChange.cpp  Team.cpp  Team.hpp  Type.hpp  Utils.hpp
src/Networking/: BgbHandler.cpp  BgbHandler.hpp  EmulatorHandle.hpp  Socket.cpp
src/PyBinding/: dump_trainer.py  recompile.sh  setup.py  test.py
src/PyBinding/GameEngine/: BattleHandler.pxd  Damage.pxd  GameEngine.pyx  Move.pxd  Pokemon.pxd  RandomGenerator.pxd  State.pxd  StatsChange.pxd  StatusChange.pxd  Team.pxd  Type.pxd
src/PyBinding/PokeBattle/Gen1/: BadActionPolicy.pyx  BattleHandler.pyi  BattleHandler.pyx  Damage.pyi  Damage.pyx  DesyncPolicy.pyx  EmulatorGameHandle.pyi  EmulatorGameHandle.pyx  Env.py  Move.pxd  Move.pyi  Move.pyx  Pokemon.pxd  Pokemon.pyi  Pokemon.pyx  PyBoyEmulator.py  RandomGenerator.pxd  RandomGenerator.pyi  RandomGenerator.pyx  State.pxd  State.pyi  State.pyx  StatsChange.pyi  StatsChange.pyx  StatusChange.pyi  StatusChange.pyx  Team.pyi  Team.pyx  Type.pyi  Type.pyx  YellowEmulator.py  _BattleHandler.pxd  _Damage.pxd  _EmulatorGameHandle.pxd  _Move.pxd  _Pokemon.pxd  _RandomGenerator.pxd  _State.pxd  _StatsChange.pxd  _StatusChange.pxd  (+3 more)
src/PyBinding/PokeBattle/Gen1/scenarios/: Agatha.scenario  Blaine.scenario  Blue3_1.scenario  Blue3_2.scenario  Blue3_3.scenario  Brock.scenario  Bruno.scenario  Erika.scenario  Giovanni.scenario  Koga.scenario  Lance.scenario  Lorelei.scenario  LtSurge.scenario  Misty.scenario  Sabrina.scenario
src/gui/: Utils.cpp  Utils.hpp  battle.cpp  gui.cpp  gui.hpp
src/utils/: OpenRouterAPI.py  dump_trainer.py  extract_cries.py  extract_moves_anim.py  extract_moves_sound.py  extract_musics.py  extract_start_anim_sfx.py  play_ai.py  play_llm.py  play_replay.py  test_env.py
tests/: Emulator.py  Env.py  moves.test_result  play_replay.py  pokeyellow_test_move.state  test_env.py  test_moves.py  train.py
