[project]
name = "pokeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.3",
    "pyboy>=2.6.0",
    "scipy>=1.16.1",
    "setuptools>=80.9.0",
    "argparse>=1.4.0",
    "gymnasium[classic-control,other]>=1.2.0",
    "numpy",
    "tensorboard",
    "torch>=2.8.0",
    "wandb",
    "scipy-stubs==1.16.1.0",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
]

